--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -36,6 +36,25 @@
                     </div>
                 </form>
             </div>
+            <div class="right m-item m-mobile-hide menu" th:if="${session.user} != null">
+                <div class="ui dropdown item">
+                    <div class="text">
+                        <img class="ui avatar image" src="https://picsum.photos/100/100?image=1005"
+                             th:arc="${session.user}!= null ? @{${session.user.avatar}}">
+                        <span th:text="${session.user}!= null ? ${session.user.nickname}">Jack</span>
+                    </div>
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a href="#" th:href="@{/admin/blogs}" class="item">管理</a>
+                        <a href="#" th:href="@{/admin/logout}" class="item">登出</a>
+                    </div>
+                </div>
+            </div>
+
+            <th:block th:if="${session.user} == null">
+            <a href="#" th:href="@{/admin/}" class="right m-item item m-mobile-hide"><i
+                    class="mini home icon"></i>登入</a>
+            </th:block>
         </div>
     </div>
     <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
@@ -81,8 +100,13 @@
     <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
     <script src="../static/lib/prism/prism.js" th:src="@{/lib/prism/prism.js}"></script>
     <script src="../static/lib/tocbot/tocbot.min.js" th:src="@{/lib/tocbot/tocbot.min.js}"></script>
+    <script src="../../static/lib/editormd/editormd.min.js" th:src="@{/lib/editormd/editormd.min.js}"></script>
     <script>
         $('#newblog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog");
+    </script>
+
+    <script>
+        $('.ui.dropdown').dropdown();
     </script>
 </th:block>
 
