--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -26,6 +26,7 @@
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
+                        <a href="#" th:href="@{/admin/blogs}" class="item">管理</a>
                         <a href="#" class="item">登出</a>
                     </div>
                 </div>
